--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: cs231n
+name: cs231nproj
 channels:
   - defaults
   - conda-forge
@@ -80,4 +80,3 @@ dependencies:
       - transformers==4.29.1
       - typing-extensions==4.5.0
       - tzdata==2023.3
-prefix: /Users/jeffreyheo/miniconda3/envs/cs231n
